<resources>
    <string name="app_name">HomeAround2</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="my_map_api_key">AIzaSyCTlGqh6XKYahNEBQTYmOi_rMy_AOQgeO0</string>


    <string name="InputOfPlace1">HousePlace</string>
    <string name="InputOfKindOfHouse1">HouseName</string>
    <string name="InputOfSquareMetres1">SqueredMetres</string>
    <string name="InputOfCostOfRent1">CostOfRent</string>
    <string name="InputOfYearConstructed1">YearConstructed</string>
    <string name="InputOfAddressRoad1">AddressRoadNum</string>
    <string name="InputOfPostalCode1">PostalCode</string>
    <string name="InputOfFloor1">Floor</string>
    <string name="InputOfBedrooms1">Bedrooms</string>
    <string name="InputOfBathrooms1">Bathrooms</string>
    <string name="InputOfState1">State</string>
    <string name="InputOfEnergyClass1">EnergyClass</string>
    <string name="InputOfAirConditioning1">AirConditioning</string>
    <string name="InputOfCostOfSharedExpenses1">CostOfSharedExpenses</string>
    <string name="InputOfHouseShortDescription1">HouseDetails</string>
    <string name="Αποθήκευση">Αποθήκευση</string>
    <string name="Είσοδος">Είσοδος</string>
    <string name="Ονοματεπώνυμο">Ονοματεπώνυμο</string>
    <string name="ΌνομαΧρήστη">Όνομα Χρήστη</string>
    <string name="Email">Email</string>
    <string name="ΑριθμόςΤηλεφώνου">Αριθμός Τηλεφώνου</string>
    <string name="ΚωδικόςΧρήστη">Κωδικός Χρήστη</string>
    <string name="ΕπαλήθευσηΚωδικού">Επαλήθευση Κωδικού</string>
    <string name="Εγγραφή">Εγγραφή</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>