<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    tools:context=".Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressBar"/>






    <com.google.android.material.card.MaterialCardView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.5dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">


                <TextView
                    android:id="@+id/ConnectionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:paddingStart="60dp"
                    android:text="Συμπλήρωση Στοιχείων"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/FullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/ConnectionText">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Ονοματεπώνυμο"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:paddingVertical="12dp" />



                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ΌνομαΧρήστη"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:paddingVertical="12dp"/>

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UserName">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:inputType="textEmailAddress"
                        android:paddingVertical="12dp" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ΑριθμόςΤηλεφώνου"
                        android:inputType="number"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:paddingVertical="12dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/Code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:layout_constraintTop_toBottomOf="@+id/Number">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ΚωδικόςΧρήστη"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:counterMaxLength="15"
                        android:inputType="textPassword"
                        android:paddingVertical="12dp" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/ConfirmCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputOfConfirmCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ΕπαλήθευσηΚωδικού"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:counterMaxLength="15"
                        android:paddingVertical="12dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/RegistrationButton2"
                    android:layout_width="191dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="14dp"
                    android:clickable="true"
                    android:text="@string/Εγγραφή"
                    android:textColorHighlight="#77C137"
                    android:layout_marginStart="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/ConfirmCode" />


            </LinearLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>


